# bitcoin-wallet-xpub

./: CMakeLists.txt  Makefile  app  main.cpp
cmake/: FindLIBBITCOINSYSTEMCPP.cmake  FindNCURSES.cmake
src/bitcoin-wallet-xpub/: CMakeLists.txt  cli.cpp  cli.hh  wallet.cpp  wallet.h  wallet.hh
